--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/three": "^0.156.0",
     "buffer": "^5.5.0||^6.0.0",
     "parcel": "^2.9.3",
+    "process": "^0.11.10",
     "typescript": "^5.2.2"
   },
   "dependencies": {
