--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "pandaset-challenge",
   "version": "1.0.0",
   "license": "MIT",
+  "source": "src/index.html",
+  "scripts": {
+    "start": "parcel",
+    "build": "parcel build --public-url ./",
+    "deploy": "gh-pages -d dist"
+  },
   "devDependencies": {
     "@types/three": "^0.156.0",
     "buffer": "^5.5.0||^6.0.0",
+    "gh-pages": "^6.2.0",
     "parcel": "^2.9.3",
     "process": "^0.11.10",
     "typescript": "^5.2.2"
@@ -12,6 +19,7 @@
   "dependencies": {
     "@react-three/drei": "^9.86.3",
     "@react-three/fiber": "^8.14.4",
+    "leva": "^0.9.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-use": "^17.4.0",
